--- a/templates/blood/index.html
+++ b/templates/blood/index.html
@@ -4,10 +4,16 @@
 <head>
     <style>
         .xyz{
-          margin-bottom: 0px;
-          background-image: url('{% static "image/homepage.jpg" %}');
-          background-size: cover;
-          background-repeat: no-repeat;
+            margin-top: 40px;
+          background-image: url('{% static "image/post-img.jpg" %}');
+             margin-bottom: 0px;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: center;
+        }
+        .jumbotron
+        {
+            background-color: #ffffff!important;
         }
       </style>
       
