--- a/templates/blood/index.html
+++ b/templates/blood/index.html
@@ -2,47 +2,86 @@
 <!DOCTYPE html>
 
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <style>
-        .xyz{
+        .xyz {
             margin-top: 40px;
-          background-image: url('{% static "image/post-img.jpg" %}');
-             margin-bottom: 0px;
-    background-repeat: no-repeat;
-    background-size: 50%;
-    background-position: center;
+            background-image: url('{% static "image/post-img.jpg" %}');
+            margin-bottom: 0px;
+            background-repeat: no-repeat;
+            background-size: 50%;
+            background-position: center;
         }
-        .jumbotron
-        {
-            background-color: #ffffff!important;
+
+        .jumbotron {
+            background-color: #ffffff !important;
         }
-      </style>
-      
+    </style>
+
 </head>
 
 
 <body>
-  {% include "blood/navbar.html" %}
+{% include "blood/navbar.html" %}
 <br>
-<section id="section-jumbotron" style="margin-bottom: 0px;" class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center xyz">
+<section id="section-jumbotron" style="margin-bottom: 0px;"
+         class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center xyz">
     <div class="container text-center">
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-     
-      
-      <br><br><br><br>
-      
-    </div>  
-  </section>
 
 
-  <div class="jumbotron" style="margin-top: 0px;margin-bottom: 0px;">
+        <br><br><br><br>
 
-    <p class="lead text-center">Welcome To Blood Bank Management System
-      </p>
-    
-    <p class="text-center">- Available Features: Patient Login, Donor Login, Admin Login -</p>
-    
-  </div>
-  {% include "blood/footer.html" %}
+    </div>
+</section>
+
+
+<div class="jumbotron"
+     style="margin-top: 0px;margin-bottom: 0px; display: flex; align-items: center; justify-content: center;">
+    <form method="post" action="">
+                            {% csrf_token %}
+
+
+        <select name="bloodgroup" id="cars" class="select2-container">
+            <option value="saab">A-</option>
+            <option value="vw">B+</option>
+            <option value="vw">B-</option>
+            <option value="vw">O+</option>
+            <option value="vw">O-</option>
+            <option value="A+" selected>A+</option>
+        </select> <input type="submit" value="Apply Blood to Bank">
+    </form>
+
+
+</div>
+
+
+<div class="container" style="margin-bottom: 20px">
+    <p class="lead text-center">Available Blood Donor
+    </p>
+    <div class="row">
+        {% for t in donors %}
+            <div class="col-sm-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="" style="text-align: center">
+                            <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="100px" width="80px"/>
+
+                        </div>
+                        <h5 class="card-title">Blood Group - {{ t.bloodgroup }}</h5>
+                        <p class="card-text">Donar Name - {{ t.get_name }} </p>
+                        <p class="card-text">Donar Address - {{ t.address }}</p>
+                        <a href="/request/{{ t.id }}" class="btn btn-info">Request to Doner</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+
+</div>
+{% include "blood/footer.html" %}
 
 
 </body>
